--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <span>App</span>
                   </a>
                 </span>
-
+                
                 <!-- ArXiv abstract Link -->
                 <!-- <span class="link-block">
                   <a href="static/pdfs/poster.pdf" target="_blank"
@@ -1104,9 +1104,9 @@
                     <li> Improve documentation</li>
                   </ul>
                 </div>
-                <a href="#" class="button is-success is-fullwidth">
+                <a href="https://github.com/Xucheng63/project" class="button is-success is-fullwidth">
                   <span class="icon"><i class="fas fa-code-branch"></i></span>
-                  <span>View the Code</span>
+                  <span>View the Github</span>
                 </a>
               </div>
             </div>
