--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-  <title>AI-Powered Data Science Assistant: Democratizing Machine Learning through Multi-Agent Systems</title>
+  <title>MyDataPilot: AI-Powered Data Science Assistant</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -70,7 +70,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">AI-Powered Data Science Assistant: Democratizing Machine Learning through Multi-Agent Systems</h1>
+            <h1 class="title is-1 publication-title">MyDataPilot: AI-Powered Data Science Assistant</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
