--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://drive.google.com/file/d/1OrWG1qD2Wt753s_2Pppc58CwIbY6VETo/view?usp=drive_link" target="_blank"
+                    <a href="https://drive.google.com/file/d/17xk7ziZQVPaZF73IglA3HUTinqCBSp3M/view?usp=drive_link" target="_blank"
                     class="external-link button is-normal is-rounded is-bright">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -1154,7 +1154,7 @@
               Together, we can make advanced data science accessible to everyone
             </p>
             <div class="buttons is-centered">
-              <a href="https://drive.google.com/file/d/1OrWG1qD2Wt753s_2Pppc58CwIbY6VETo/view?usp=sharing" class="button is-primary is-large">
+              <a href="https://drive.google.com/file/d/17xk7ziZQVPaZF73IglA3HUTinqCBSp3M/view?usp=drive_link" class="button is-primary is-large">
                 <span class="icon"><i class="fas fa-rocket"></i></span>
                 <span>Try the App</span>
               </a>
